<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_setup_0_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs506.accountable.Setup_0_Activity"
    tools:showIn="@layout/activity_setup_0_">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="Enter a new PIN as your Password"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/firstPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingTop="125dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:onClick="buttonClickHandler"
        android:text="Submit"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_container"
        android:textColor="@drawable/text_container"
        android:textSize="24sp" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_container"
        android:onClick="skipButton"
        android:text="  Dont Use A PIN  "
        android:textColor="@drawable/text_container"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

</LinearLayout>
