<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_setup_2_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs506.accountable.Setup_2_Activity"
    tools:showIn="@layout/activity_setup_2_">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:text="What is Your Current Bank Account Balance?" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="Account Name:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/accountNameHelp"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="accountHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingTop="25dp"
        android:text="Account Balance:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/accountBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".99"
            android:ems="10"
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/accountBalanceHelp"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="accountHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="Submit"
        android:background="@drawable/button_container"
        android:textColor="@drawable/text_container"
        android:onClick="addAccount"/>
</LinearLayout>
