<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_setup_3_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs506.accountable.Setup_3_Activity"
    tools:showIn="@layout/activity_setup_3_">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter all Bills that you Pay Regularly"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/billName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.47"
            android:ems="10"
            android:hint="Bill Name"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="billNameHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/billAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="Bill Amount"
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="billAmountHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.47"
            android:ems="10"
            android:hint="Due Date (mm/dd/year)"
            android:maxLength="10"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="dueDateHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/occurrenceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="occurrenceHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_container"
        android:onClick="addBill"
        android:text="Add Bill"
        android:textColor="@drawable/text_container"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="moveNext"
        android:text="Next"
        android:background="@drawable/button_container"
        android:textColor="@drawable/text_container"
        android:textSize="24sp" />

</LinearLayout>

